Update nima, java, tapir